# marka

./: .gitignore  MANIFEST.in  Makefile  README.md  install.sh  main.py  marka.desktop  mdviewer.desktop  pyproject.toml  requirements.txt  test_sample.md
data/: io.github.HemanthGangula.Marka.metainfo.xml  io.github.hemanth.Marka.metainfo.xml  org.gnome.MDViewer.metainfo.xml
debian/: changelog  control  copyright  rules
marka/: __init__.py  app.py  config.py  renderer.py  status_bar.py  window.py
mdviewer/: __init__.py  app.py  config.py  editor.py  file_manager.py  preview.py  renderer.py  theme_manager.py  window.py
packaging/: io.github.HemanthGangula.Marka.json  io.github.hemanth.Marka.json  org.gnome.MDViewer.json  snapcraft.yaml
snap/: snapcraft.yaml
tests/: test_config.py  test_renderer.py
