[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "md-viewer-gtk"
version = "1.0.0"
description = "Lightweight GTK4/libadwaita Markdown viewer and editor for Linux"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MD Viewer Contributors" },
]
keywords = ["markdown", "gtk4", "gnome", "editor", "viewer", "libadwaita"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "Markdown>=3.5,<4.0",
    "pygments>=2.17",
]

[project.urls]
Homepage = "https://github.com/gnome/md-viewer"
"Bug Tracker" = "https://github.com/gnome/md-viewer/issues"

[project.scripts]
mdviewer = "mdviewer.app:main"

[project.gui-scripts]
mdviewer-gui = "mdviewer.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdviewer*"]

[tool.setuptools.package-data]
mdviewer = ["py.typed"]
