[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marka"
version = "1.0.0"
description = "Lightweight GTK4/libadwaita Markdown viewer and editor for Linux"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hemanth" },
]
keywords = ["markdown", "gtk4", "gnome", "editor", "viewer", "libadwaita"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "Markdown>=3.5,<4.0",
    "pygments>=2.17",
]

[project.urls]
Homepage = "https://github.com/HemanthGangula/marka"
"Bug Tracker" = "https://github.com/HemanthGangula/marka/issues"
"Source Code" = "https://github.com/HemanthGangula/marka"

[project.scripts]
marka = "marka.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["marka*"]

[tool.setuptools.package-data]
marka = ["py.typed"]
